--- a/chapter2.tex
+++ b/chapter2.tex
@@ -84,11 +84,11 @@ In order to ensure the proper functioning of the decision-making system and to a
     \item \textbf{Performance}: The system must operate optimally across diverse environments. It should consistently provide a responsive and reliable experience, even under high transaction volumes or varying network conditions \cite{DockerArchitecture2023, ForsgreniDevOpsMetrics2023}.
 \end{itemize} 
 
-\section{Requirements Analysis}
+% \section*{Requirements Analysis}
 
-In this section, we'll outline the various features that our app should offer, using a general use case diagram \cite{CockburnUML2002}.
+% In this section, we'll outline the various features that our app should offer, using a general use case diagram \cite{CockburnUML2002}.
 
-\subsection{General use case diagram}
+\subsection*{General use case diagram}
 
 Below, we present the various actors of the application and the actions they are authorized to perform.
 The overall diagram is illustrated in Figure \ref{fig:use-case-diagram}:
@@ -265,7 +265,6 @@ GitHub \cite{GithubWebsite} was utilized for version control, employing a struct
 \end{figure}
 
 
-\addtocontents{toc}{\protect\newpage}
 \section{Product backlog}
 
 The backlog was created before the sprints to plan the milestones and determine the content of each sprint based on project requirements \cite{SchwarzScrum2019}. It includes the following fields:
@@ -474,3 +473,4 @@ Figure \ref{fig:gantt-chart} shows the Gantt chart that describes the progress o
 
 Our Sprint 0 marked the exciting start of our KORPOR project \cite{ScaledAgileFramework2024, SutherlandScrum2020}. We defined global and specific objectives, developed a solid architecture, and configured an optimal working environment. With a clear vision of the initial product backlog and preliminary planning for upcoming sprints, we are ready to achieve our vision and achieve our goals successfully \cite{SchwarzScrum2019, RubinEssentialScrum2012}.
 
+\addtocontents{toc}{\protect\newpage}
