--- a/chapter4.tex
+++ b/chapter4.tex
@@ -92,7 +92,7 @@ The data scraping system successfully collected comprehensive property informati
     \vspace{1cm}
     
     % Bottom row - one centered image
-    \begin{minipage}{0.45\textwidth}
+    \begin{minipage}{0.5\textwidth}
         \centering
         \includegraphics[width=\linewidth]{images/home_in_tunisia_scraper.jpeg}
         \caption*{Home in Tunisia Scraper}
@@ -166,7 +166,7 @@ To provide a clearer understanding of the property valuation process, Figure \re
 \newpage
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=0.65\textwidth]{images/valuation_workflow_diagram.png}
+    \includegraphics[width=1\textwidth]{images/valuation_workflow_diagram.png}
     \caption{Property Valuation Prediction Workflow Diagram}
     \label{fig:valuation-workflow}
 \end{figure}
@@ -432,6 +432,7 @@ The Real Estate Assistant underwent extensive testing to ensure accurate respons
     \label{tab:assistant-test-scenarios}
 \end{table}
 
+\newpage
 \subsection{Retrospective}
 
 The Real Estate Assistant sprint demonstrated the successful integration of NLP technology into the platform. Table \ref{tab:assistant-retrospective} summarizes the key outcomes and future improvements.
